WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212722
[watchOS] fast/events/watchos/change-focus-during-change-event.html crashes
https://bugs.webkit.org/show_bug.cgi?id=212722
Summary
[watchOS] fast/events/watchos/change-focus-during-change-event.html crashes
Wenson Hsieh
Reported
2020-06-03 16:26:30 PDT
<
rdar://problem/60633339
>
Attachments
Patch
(2.12 KB, patch)
2020-06-03 16:30 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-06-03 16:30:53 PDT
Created
attachment 400979
[details]
Patch
EWS
Comment 2
2020-06-03 17:25:06 PDT
Committed
r262526
: <
https://trac.webkit.org/changeset/262526
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 400979
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug